# rust_gui

./: Cargo.toml  README.md
src/: main.rs  theme.rs
src/res/: icon.rgba
