[package]
name = "rust_gui"
version = "0.1.0"
edition = "2021"
authors = ["TerraBoii"]
readme = "README.md"
repository = "https://github.com/TerraBoii/rust_gui"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.*"